gallery.component: fix thumbnail overflow.

--- a/src/app/galleries/gallery/gallery.component.css
+++ b/src/app/galleries/gallery/gallery.component.css
@@ -6,4 +6,5 @@
   right: var(--site-padding);
   border: 1px solid #555;
   padding-top: var(--top-bar-height);
+  overflow-y: auto;
 }
