--- a/src/styles.css
+++ b/src/styles.css
@@ -26,6 +26,7 @@ body {
   left: 0;
   right: 0;
   margin: 0;
+  overflow: hidden;
 }
 
 .__display-block {
